--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.4.1",
     "crypto": "^1.0.1",
     "ejs": "^3.1.5",
@@ -19,6 +20,7 @@
     "express-session": "^1.17.1",
     "mongoose": "^5.11.10",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^3.0.5"
   }
 }
